--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
               <h3 class="title">Pneus</h3>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam
-                beatae voluptatibus sit cupiditate eum in eligendi, optio
-                dolores harum alias quia placeat labore et itaque maiores
-                voluptate consectetur? Enim, eius!
+                beatae voluptatibus sit cupiditate eum in eligendi.
               </p>
             </div>
             <div class="card">
@@ -130,9 +128,7 @@
               <h3 class="title">Rodas</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Eligendi, unde eveniet sunt voluptatum suscipit praesentium iste
-                ipsum incidunt quidem aliquam deserunt illum animi magnam natus.
-                Dignissimos expedita fugit excepturi accusamus.
+                Eligendi.
               </p>
             </div>
             <div class="card">
@@ -140,9 +136,7 @@
               <h3 class="title">Acessorios</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia
-                repudiandae magnam non accusantium temporibus suscipit dolor
-                doloribus blanditiis tempora atque! Ex voluptates consectetur
-                molestiae accusantium, autem ea totam esse debitis?
+                repudiandae magnam non accusantium.
               </p>
             </div>
           </div>
